Bug 91411 - Problems with the cells recalculation - F9 also does not work (hard recalc needed)
Summary: Problems with the cells recalculation - F9 also does not work (hard recalc ne...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.0.beta2
Hardware: Other All
: highest normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:5.1.0 target:5.0.0.1 target:4...
Keywords: regression
: 92255 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-05-20 15:15 UTC by Lehmeier
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
problem file (33.15 KB, application/vnd.oasis.opendocument.spreadsheet)
2015-05-20 15:15 UTC, Lehmeier
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lehmeier 2015-05-20 15:15:21 UTC
Created attachment 115751 [details]
problem file

When I enter the times in my document and calculate elasse Unfolded also. If I then delete the cell contents, the result is still displayed.

With the 4.3.7 everything works fine.
Comment 1 raal 2015-05-20 17:29:20 UTC
I can confirm with Version: Version: 5.0.0.0.alpha1+
Build ID: 51d16cc69d8ad9065f61d108ea25d6a025a2e228
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-17_03:27:43

steps to reproduce
open file  , G38=41:30
ctrl+shift-F9

actual results:after recalc G38=00:00
Comment 2 raal 2015-05-25 15:58:28 UTC
@Lehmeier,
tested with Version: 5.1.0.0.alpha1+
Build ID: 891304bb0ad3af9d8d73f947f25477abf57485a4
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-05-24_00:37:40

and seems to be fixed. Please retest with dev build / http://dev-builds.libreoffice.org/daily/master/
Thank you
Comment 3 Eike Rathke (retired, only occasionally showing up) 2015-06-15 20:58:01 UTC
I can reproduce in master, enter values in, for example, C8 and D8, G8 gets calculated. Delete cell C8 or D8, G8 is not recalculated. The same for all rows 8-37, only update of row 7 works.

Apparently a problem of formula groups. Taking.
Comment 4 Commit Notification 2015-06-15 21:50:20 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80ec99db4325a439a8a3f1d420d0a80f8bf9c439

Resolves: tdf#91411 end listening only on selected sheets

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2015-06-15 22:46:13 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ce38023a48bf4e14a18fe964ca7ebb50a3ef597c&h=libreoffice-5-0

Resolves: tdf#91411 end listening only on selected sheets

It will be available in 5.0.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Eike Rathke (retired, only occasionally showing up) 2015-06-15 23:15:41 UTC
Pending review https://gerrit.libreoffice.org/16303 for 4-4
Comment 7 Commit Notification 2015-06-16 14:05:03 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b121efd08e9cc396af25b79c2a4ee55507ff6ee0&h=libreoffice-4-4

Resolves: tdf#91411 end listening only on selected sheets

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-06-16 16:08:16 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2d4a931208acd0060bfaa00a9444e6e0ceb7e83c

unit test for tdf#91411

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Eike Rathke (retired, only occasionally showing up) 2015-06-22 16:28:32 UTC
*** Bug 92255 has been marked as a duplicate of this bug. ***