Resolves: tdf#91411 end listening only on selected sheets

... not in cell areas of all sheets.

(cherry picked from commit 80ec99db4325a439a8a3f1d420d0a80f8bf9c439)

Conflicts:
	sc/source/core/data/document.cxx

Change-Id: I8d19c15c6d8d89652ac5695214bc4dd930783087